objects/sked_Booking_Email_Setting__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <fields>
        <fullName>Activated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Activated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Buyer_Opportunity_CC_List__c</fullName>
        <inlineHelpText>This contains a list of email, separated by ;</inlineHelpText>
        <label>Buyer Opportunity CC List</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Experience_Email__c</fullName>
        <label>Customer Experience Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Inside_Sales_Inbound_Email__c</fullName>
        <label>Inside Sales - Inbound Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Last_Job_Rule_Minutes__c</fullName>
        <label>Last Job Rule Minutes</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Seller_Opportunity_CC_List__c</fullName>
        <inlineHelpText>This contains a list of email, separated by ;</inlineHelpText>
        <label>Seller Opportunity CC List</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Travel_Time_Buffer__c</fullName>
        <description>Number of buffer minutes for test drives and deliveries</description>
        <inlineHelpText>For test drives and deliveries only</inlineHelpText>
        <label>Travel Time Buffer</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Skedulo Booking Email Setting</label>
</CustomObject>